--- a/CuahangSmartphone/app/src/main/res/layout/activity_giao_dien_giohang.xml
+++ b/CuahangSmartphone/app/src/main/res/layout/activity_giao_dien_giohang.xml
@@ -47,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:textSize="25sp"
         android:textColor="#ffe0e0"
         android:text="Tổng tiền" />
 
