--- a/CuahangSmartphone/app/src/main/res/layout/activity_home.xml
+++ b/CuahangSmartphone/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/new_login_gradients"
     tools:context="com.cuahang.smartphone.login.MainActivity">
 
     <android.support.v7.widget.CardView
@@ -455,16 +456,33 @@
             </HorizontalScrollView>
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/listsanpham"
-        android:text="Danh mục sản phẩm"
-        android:layout_width="match_parent"
+        android:text="SAMSUNG"
+        android:layout_width="190dp"
         android:layout_height="150dp"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textAlignment="center"
         android:paddingTop="50dp"
-        android:background="#009DFA"
-        android:textColor="@color/colorTitle"
+        android:background="#3643d8"
+        android:layout_marginLeft="8dp"
+        android:textColor="#ffffff"
         android:gravity="center_horizontal" />
-
+    <TextView
+        android:id="@+id/listsanpham2"
+        android:text="APPLE"
+        android:layout_width="190dp"
+        android:layout_height="150dp"
+        android:textSize="25sp"
+        android:textAlignment="center"
+        android:paddingTop="50dp"
+        android:background="#3643d8"
+        android:layout_marginLeft="17dp"
+        android:textColor="#ffffff"
+        android:gravity="center_horizontal" />
+    </LinearLayout>
 </LinearLayout>
