--- a/CuahangSmartphone/app/src/main/res/layout/itemrow.xml
+++ b/CuahangSmartphone/app/src/main/res/layout/itemrow.xml
@@ -18,6 +18,8 @@
             android:id="@+id/txtTenDienThoai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="18dp"
             android:text="TextView" />
 
         <TextView
@@ -29,9 +31,9 @@
         <ImageView
             android:id="@+id/imgThemdienThoai"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             app:srcCompat="@drawable/plus_16"
-            android:layout_marginRight="0dp"/>
+            android:layout_marginLeft="250sp"/>
 
     </LinearLayout>
 
