--- a/CuahangSmartphone/app/src/main/res/layout/activity_home.xml
+++ b/CuahangSmartphone/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/new_login_gradients"
-    tools:context="com.cuahang.smartphone.login.MainActivity">
+    tools:context="com.cuahang.smartphone.login.LoginActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
