--- a/CuahangSmartphone/app/src/main/res/layout/activity_login.xml
+++ b/CuahangSmartphone/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     android:paddingLeft="18dp"
     android:paddingRight="18dp"
     android:paddingTop="16dp"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
